# perudo

./: CMakeLists.txt  README.md
include/: core.h  game.h
src/: core.cpp  game.cpp  main.cpp
